kubernetes/dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userportal
  labels:
    app: userportal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userportal
  template:
    metadata:
      labels:
        app: userportal
    spec:
      containers:
      - name: userportal
        image: karimali3/userportal:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.5"
          limits:
            memory: "1024Mi"
            cpu: "1"
        volumeMounts:
        - name: settings
          readOnly: true
          mountPath: "/secrets/settings/"
        - name: private-key
          readOnly: true
          mountPath: "/secrets/private-key/"
        - name: sql-ca
          readOnly: true
          mountPath: "/opt/sql-ca/"
        - name: idp
          readOnly: true
          mountPath: "/opt/idp/"
        - name: allocations
          readOnly: true
          mountPath: "/opt/allocations/"
        - name: staticfiles
          mountPath: /var/www/api/
          readOnly: false
        readinessProbe:
          httpGet:
            path: /watchman/
            port: 8000
          periodSeconds: 5
          timeoutSeconds: 5
      - name: nginx-sidecar
        image: nginx:stable
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.5"
          limits:
            memory: "512Mi"
            cpu: "1"
        securityContext:
          privileged: false
          # Nginx must start as root to bind the proper port in the container.
          allowPrivilegeEscalation: true
          runAsNonRoot: false
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d
            readOnly: true
          - name: staticfiles
            mountPath: /var/www/api/
            readOnly: true
        readinessProbe:
          httpGet:
            path: /nghealth/
            port: 80
          periodSeconds: 3

      volumes:
      - name: settings
        secret:
          secretName: settings
          optional: true
      - name: private-key
        secret:
          secretName: private-key
          optional: true
      - name: sql-ca
        configMap:
          name: sql-ca
          optional: true
      - name: idp
        configMap:
          name: idp
          optional: true
      - name: allocations
        configMap:
          name: allocations
          optional: true
      - name: nginx-conf
        configMap:
          name: backend-api-nginx
      - name: staticfiles
        emptyDir: {}

      imagePullSecrets:
        - name: registry-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: userportal

spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: userportal

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal
spec:
  ingressClassName: traefik
  rules:
    - host: portal.cluster.paice-ua.com
      http:
        paths:
          - backend:
            service:
              name: userportal
              port:
                number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - portal.cluster.paice-ua.com
      secretName: portal-cluster-paice-ua-com-tls
